# lavbench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  admin_guide.md  api_reference.md  audit-and-refactor-plan.md  backup_db.sh  cheap_gpu_testing_alternatives.md  cliff.toml  deploy_debug.sh  deploy_docker.sh  docker-compose.yml  jury_guide.md  sample_submission.ipynb  seed_gpu_task.py  start_worker.sh  student_guide.md  test_run.py  testing_on_aws_gpu.md  vulnerabilities.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  labeler.yml  post-release.yml  release.yml  stale.yml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  app.py  auth_utils.py  cache_utils.py  config.py  conftest.py  dev-requirements.in  dev-requirements.txt  entrypoint.sh  error_utils.py  evaluation_engine.py  generate_master_key.py  log_config.py  migrate_reveal_results.py  models.py  pyproject.toml  recreate_db.py  requirements.in  requirements.txt  reset_for_fresh_start.py  setup-admin.py  spec.py  sse_utils.py  tasks.py  version.py  worker-entrypoint.sh  worker_utils.py
backend/backend/task_images/task_019ef6ae-4b7d-734c-9818-59aa07315d1f/: Dockerfile
backend/backend/task_images/task_2/: requirements.txt
backend/examples/: baseline.ipynb  generate_labels.py
backend/models/: __init__.py  audit_log.py  base.py  challenge.py  hooks.py  naming.py  stage.py  submission.py  task.py  user.py
backend/routes/: admin.py  auth.py  challenges.py  docs.py  leaderboard.py  submissions.py  tasks.py
backend/schemas/: __init__.py  admin.py  auth.py  challenge.py  common.py  exceptions.py  leaderboard.py  stage.py  submission.py  task.py
backend/schemas/responses/: __init__.py  _base.py  admin.py  auth.py  challenge.py  common.py  docs.py  leaderboard.py  submission.py  task.py  worker.py
backend/scripts/: check_error_codes.py
backend/services/: __init__.py  audit_service.py  challenge_service.py  file_validation.py  leaderboard_service.py  submission_service.py
backend/task_images/task_2/: Dockerfile  requirements.txt
backend/task_modules/: __init__.py  docker_utils.py  image_builder.py  leaderboard.py  submission_runner.py  system.py  templates.py
backend/test_stage_templates/: baseline_warmup.ipynb  labels.parquet  task_config.json
backend/tests/: test_500_handler.py  test_admin_routes.py  test_admin_routes_pytest.py  test_audit_service.py  test_auth_routes.py  test_auth_routes_pytest.py  test_auth_utils.py  test_auth_utils_pytest.py  test_backup.py  test_backup_pytest.py  test_cache_utils.py  test_cache_utils_pytest.py  test_challenge_import_export.py  test_challenge_lifecycle.py  test_challenges_routes.py  test_challenges_routes_pytest.py  test_csrf.py  test_custom_eval_validation.py  test_double_blind_routes_pytest.py  test_evaluator_validation_pytest.py  test_exceptions.py  test_exceptions_pytest.py  test_file_validation.py  test_kill_queue_routes_pytest.py  test_leaderboard_ordering_edge_cases_pytest.py  test_leaderboard_routes.py  test_leaderboard_routes_pytest.py  test_leaderboard_service.py  test_leaderboard_service_pytest.py  test_log_config_pytest.py  test_metrics.py  test_metrics_pytest.py  test_models.py  test_models_pytest.py  test_remaining_routes.py  test_routes.py  test_routes_pytest.py  test_services.py  test_services_pytest.py  test_sse_routes_pytest.py  (+21 more)
backend/tests/helpers/: sse_test_utils.py
backend/utils/: access.py  audit.py  cache.py  cache_helpers.py  competitor.py  dates.py  files.py  ipynb.py  json_utils.py  metadata.py  pagination.py  request_helpers.py  sse.py
docs/: ARCHITECTURE.md  Makefile  README.md  custom-evaluators.md  make.bat  requirements.txt
docs/evaluator_templates/: evaluator_custom_template.py  evaluator_ht1_audio.py  evaluator_ht2_delivery.py  evaluator_ht3_animal.py
docs/scripts/: _generate_api_spec.py
docs/source/: admin_guide.md  api_reference.rst  architecture.md  competitor_guide.md  conf.py  index.rst  introduction.rst  jury_guide.md  robots.txt  student_guide.md
docs/source/_templates/: layout.html
docs/source/api/: spec.json
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/scripts/: check_translations.py
frontend/src/: App.jsx  AuthContext.jsx  i18n.js  index.css  main.jsx  setupTests.js  test-utils.jsx
frontend/src/__tests__/: App.test.jsx  AuthContext.test.jsx
frontend/src/components/: ErrorBoundary.jsx
frontend/src/context/: AppContext.jsx  ChallengesContext.jsx  NotificationsContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAdminChallengesQuery.js  useAdminMetricsQuery.js  useApiError.js  useAuditLogsQuery.js  useBackupMutations.js  useBackupsQuery.js  useChallengeMutations.js  useChallengesQuery.js  useCompetitorMutations.js  useCompetitorSearchQuery.js  useCompetitorsQuery.js  useDocsQuery.js  useLeaderboardMutations.js  useLeaderboardQuery.js  useMutation.js  useQueueQuery.js  useSSE.js  useStageMutations.js  useSubmissionDetailQuery.js  useSubmissionMutations.js  useSubmissionsQuery.js  useTaskMutations.js  useUserMutations.js  useUsersQuery.js
frontend/src/mocks/: handlers.js
frontend/src/pages/: AdminPanel.jsx  AdminPanel.test.jsx  AdminPanelStages.test.jsx  AdminPanelUnifiedParquet.test.jsx  Home.jsx  LeaderboardDemo.jsx  LeaderboardView.jsx  Login.jsx  SubmissionsView.jsx  SubmissionsView.test.jsx
frontend/src/services/: AdminService.js  ApiService.js  (+2 more)
guides/: admin_guide.md
guides/bg/: admin_guide.md  competitor_guide.md  jury_guide.md  student_guide.md
guides/en/: admin_guide.md  api_reference.md  competitor_guide.md  jury_guide.md  student_guide.md
mock_bin/: docker
scripts/: deploy-debug.sh  deploy-docker.sh  deploy-server.sh  deploy-worker.sh  edit-config.sh  generate-keys.sh  setup-worker.sh  setup.sh  start-worker.sh
(+129 files in other folders)
