[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore:Received multiple replies from node name",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/python*/site-packages/*",
    "*/lib/python*/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
# Removed "tests" from global exclude – now formatter will include tests
exclude = ["venv", ".git", "__pycache__", "test_stage_templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "A", "T"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "S105", "S106", "S108", "T201"]
"backend/conftest.py" = ["S101", "S105", "S106", "S107", "S108", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"