[project]
name = "lavbench"
version = "0.1.0"
description = "Sandboxed code evaluation platform — created by the Bulgarian AI Olympiad Committee"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Bulgarian AI Olympiad Committee" },
]
keywords = ["ai", "evaluation", "sandbox", "education", "leaderboard"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/delyan-boychev/lavbench"
Repository = "https://github.com/delyan-boychev/lavbench"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore:Received multiple replies from node name",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/python*/site-packages/*",
    "*/lib/python*/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py312"
# Removed "tests" from global exclude – now formatter will include tests
exclude = ["venv", ".git", "__pycache__", "test_stage_templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "A", "T", "C4", "RUF", "PERF", "LOG"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "S105", "S106", "S108", "T201", "PERF"]
"backend/conftest.py" = ["S101", "S105", "S106", "S107", "S108", "T201", "PERF"]
"backend/scripts/check_error_codes.py" = ["T201"]
"backend/routes/admin.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"