[project]
name = "lavbench"
version = "0.2.1"
description = "Sandboxed code evaluation platform — created by the Bulgarian AI Olympiad Committee"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Bulgarian AI Olympiad Committee" },
]
keywords = ["ai", "evaluation", "sandbox", "education", "leaderboard"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/delyan-boychev/lavbench"
Repository = "https://github.com/delyan-boychev/lavbench"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.mypy]
strict = true
python_version = "3.12"
show_error_codes = true
exclude = [
    "tests/",
    "scripts/",
    "examples/",
    "reset_for_fresh_start.py",
    "setup-admin.py",
    "conftest.py",
]
plugins = ["pydantic.mypy"]
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "routes/*"
disallow_untyped_defs = false
disallow_untyped_calls = false
# Flask sets request.user at runtime via middleware; SQLAlchemy relationship iteration
# is a known stub limitation; form data arrives as str|None, etc.
disable_error_code = ["attr-defined", "arg-type", "return-value", "union-attr", "no-any-return", "import-untyped"]

[[tool.mypy.overrides]]
module = "models/*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tasks"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = ["attr-defined", "assignment", "arg-type", "import-untyped"]

[[tool.mypy.overrides]]
module = "evaluation_engine"
disallow_untyped_defs = false
disable_error_code = ["import-untyped", "no-untyped-call", "no-any-return", "assignment"]

[[tool.mypy.overrides]]
module = "utils.sse"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "task_modules.submission_runner"
disable_error_code = ["attr-defined", "return-value", "union-attr", "no-redef", "assignment", "untyped-decorator", "no-any-return", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/python*/site-packages/*",
    "*/lib/python*/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py312"
# Removed "tests" from global exclude – now formatter will include tests
exclude = ["venv", ".git", "__pycache__", "test_stage_templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "A", "T", "C4", "RUF", "PERF", "LOG"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "T201", "PERF"]
"conftest.py" = ["S101", "S105", "S106", "S107", "S108", "T201", "PERF"]
"scripts/check_error_codes.py" = ["T201"]
"routes/admin.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"